修改测试报告

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
-addpots = -s -v
+addopts = -s -v --alluredir=./report/temp
 
-testpaths = ./qiyuanlab_testcases
+testpaths = qiyuanlab_testcases
 
 python_files = test_*.py
