1.新增用例 2.完善allure报告

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,31 +1,18 @@
 [pytest]
 # 设置 Allure 报告目录，指定报告文件保存位置
-allure_reports_dir = ./reports/allure-results
+allure_reports_dir = ./reports/allure-result
 
 # 设置 pytest 默认选项，避免每次运行时都输入
 addopts = --maxfail=5 --disable-warnings -v
+
 
 # 配置 Allure 报告路径，生成 HTML 报告
 markers =
     smoke: Smoke tests
     regression: Regression tests
 
-# 设置 pytest 的基本配置，忽略警告信息等
-filterwarnings =
-    ignore::pytest.PytestCollectionWarning
-    ignore:.*?DeprecationWarning
-
-# 配置 pytest 插件（如果需要更多插件支持）
-# plugins = pytest-allure-adaptor
 
 
-[allure]
-# 设置报告格式（HTML、XML 等）
-report_format = html
 
-# 设置 Allure 结果目录
-results_dir = ./allure-results
 
-# 配置是否启用报告中的附件功能
-attachment = True
 
